--- a/launch.json
+++ b/launch.json
@@ -1,15 +1,22 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "url": "http://localhost:3000", // Change this to your server's port
+            "webRoot": "${workspaceFolder}",
+            "sourceMaps": true,
+            "sourceMapPathOverrides": {
+                "webpack:///./*": "${webRoot}/*"
+            },
+            "runtimeArgs": [
+                "--disable-web-security", // Optional: Use cautiously, disables CORS
+                "--disable-gpu",
+                "--remote-debugging-port=9222" // Enables remote debugging port
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
